syntax = "proto3";

///////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////

package Listener;

///////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////

message SubRequest {
    string timestamp = 1;
}
message SubResult {
    string timestamp = 1;
}

service Service {
    rpc sub(SubRequest) returns(stream SubResult);
}

///////////////////////////////////////////////////////////////////////////////
///////////////////////////////////////////////////////////////////////////////
